update DOM file

--- a/CSS/检测兼容性.md
+++ b/CSS/检测兼容性.md
@@ -38,6 +38,16 @@ result = window.getComputedStyle(document.head).filter == 'blur(5px)';
 document.head.setAttribute('style', 'filter: blur(5px)');
 result = !!document.head.style.filter;
 ```
+#### CSS 兼容性
+
+- ms代表【ie】内核识别码
+- moz代表火狐【firefox】内核识别码
+- webkit代表谷歌【chrome】/苹果【safari】内核识别码
+- o代表欧朋【opera】内核识别码
+-webkit-overflow-scrolling: touch; /* 当手指从触摸屏上移开，会保持一段时间的滚动 */
+-webkit-overflow-scrolling: auto; /* 当手指从触摸屏上移开，滚动会立即停止 */
+ backface-visibility 指定当元素背面朝向观察者时是否可见。
+perspective指定了观察者与 z=0 平面的距离，使具有三维位置变换的元素产生透视效果。 z>0 的三维元素比正常大，而 z<0 时则比正常小，大小程度由该属性的值决定
 
 ### 总结一下
 不考虑兼容性，对CSS的进行检测使用CSS.supports()方法，要检测IE浏览器使用赋值取值法。
