feat: 🎸 add 箭头函数

--- a/ES6/方法汇总.md
+++ b/ES6/方法汇总.md
@@ -188,7 +188,8 @@ Object.is(-0, +0) === false
 Map 的 has 是用来查找键名的
 Set 的 has 是用来查找键值的
 
-
+### 箭头函数
+它和普通函数最不同的一点就是对于箭头函数的this指向，是根据它外层（函数/全局）作用域来决定
 
 ### 模块加载方案
 最主要的有 CommonJS 和 AMD，CommonJS 用于服务器，AMD用于浏览器。ES6实现简单，完全可以取代 CommonJS 和 AMD，成为浏览器和服务器通用的模块解决方案
