--- a/Javascript/面向对象.md
+++ b/Javascript/面向对象.md
@@ -282,3 +282,9 @@ function inheritPrototype(subType, superType) {
 
 **优点**
 只调用一次SuperType构造函数，并且因此避免了在SubType.prototype上创建不必要的、多余的属性。与此同时，原型链保持不变，。
+
+
+#### 原型链
+其基本思想是利用原型让一个引用类型继承另一个引用类型的属性和方法。
+构造函数、原型和实例的关系：
+每个构造函数都有一个原型对象，原型对象都包含一个指向构造函数的指针，实例都包含一个指向原型对象的内部指针。假如让原型对象等于另一个类型的实例，那么此时的原型对象将包含一个指向另一个原型的指针
