--- a/React/性能优化.md
+++ b/React/性能优化.md
@@ -59,3 +59,16 @@ hooks之前，React存在很多问题
 - 复杂组件变得难以理解，高阶组件和函数组件的嵌套过深。
 - class组件的this指向问题
 - 难以记忆的生命周期
+
+
+
+### jQuery 和 React 框架比较
+#### 性能比较
+jQuery基本都是浏览器原生操作，实计上h5的很多api都借鉴了jQuery.基本上元素选择和更新都是使用浏览器原生的接口，这些操作几乎都没有性能损耗。所以说jQuery 操作DOM的性能还是比较好的。
+
+#### 开发效率比较
+jQuery更新HTML虽然性能比较好，但是效率比较低，而且也不太符合目前浏览器的分层的前后端分离实践。
+
+#### 总结
+jQuery从后台返回的数据要渲染到前端上需要通过手动更新DOM，但是手动改DOM一般比MVC渲染的性能好。但开发效率和代码规范不如NG/ReactJS。目前总体来说基于jQuery的前端组件库最多，而Angular/React的还比较少。
+
