--- a/Javascript/跨域.md
+++ b/Javascript/跨域.md
@@ -1,6 +1,12 @@
 [参考文献](https://github.com/happylindz/blog/issues/3)
 [软一峰](https://www.ruanyifeng.com/blog/2016/04/cors.html)
 [CORS](https://github.com/amandakelake/blog/issues/62)
+### 浏览器同源策略
+如果两个 URL 的 protocol、port (如果有指定的话)和 host 都相同的话，则这两个 URL 是同源。
+
+#### 为什么需要有同源策略
+如果没有同源策略，不同源的数据和资源（如HTTP头、Cookie、DOM、localStorage等）就能相互随意访问
+
 #### JSONP
 
 - server端
