--- a/ES6/方法汇总.md
+++ b/ES6/方法汇总.md
@@ -179,6 +179,10 @@ Object.is(-0, +0) === false
 
 #### entries, keys, values
 
+#### Number.isNaN ， isNaN
+通过方法 Number.isNaN，你可以检测你传递的值是否为 数字值 并且是否等价于 NaN
+通过方法 isNaN， 你可以检测你传递的值是否一个 number
+
 #### includes
 ```js
 [NaN].includes(NaN) //true
@@ -190,6 +194,7 @@ Set 的 has 是用来查找键值的
 
 ### 箭头函数
 它和普通函数最不同的一点就是对于箭头函数的this指向，是根据它外层（函数/全局）作用域来决定
+对于箭头函数，this 关键字指向的是它当前周围作用域（简单来说是包含箭头函数的常规函数，如果没有常规函数的话就是全局对象），这个行为和常规函数不同。
 
 ### 模块加载方案
 最主要的有 CommonJS 和 AMD，CommonJS 用于服务器，AMD用于浏览器。ES6实现简单，完全可以取代 CommonJS 和 AMD，成为浏览器和服务器通用的模块解决方案
