多列等高布局

--- a/CSS/布局.md
+++ b/CSS/布局.md
@@ -237,3 +237,146 @@ DOM结构同上
     right: 0;
 }
 ```
+
+### 多列等高布局
+1. `padding+margin+overflow`实现多列等高，兼容性好
+2. border实现多列等高，左列浮动，伪元素清除浮动
+3. display:flex多列等高
+4. display:grid实现多列等高
+5. display:table-cell实现多列等高
+6. 父元素线性渐变背景色实现多列等高
+```html
+<div class="container">
+    <div class="left">content<br/></div>
+    <div class="right">
+        content<br/>
+        content<br/>
+        content<br/>
+        content<br/>
+    </div>
+</div>
+```
+
+```css
+.container {
+    position: relative;
+    overflow: hidden;
+    width: 1000px;
+    color: pink;
+}
+.left {
+    float: left;
+    width: 200px;
+    background-color: red;
+    padding-bottom: 9999px;
+    margin-bottom: -9999px;
+}
+
+.right {
+    float: left;
+    width: 800px;
+    background-color: greenyellow;
+    padding-bottom: 9999px;
+    margin-bottom: -9999px;
+}
+```
+
+
+```css
+.container {
+    position: relative;
+    width: 800px;
+    border-left: 200px solid purple;
+    color: pink;
+}
+.container:after{
+    content: '';
+    display: block;
+    height: 0;
+    clear: both;
+}
+
+.left {
+    float: left;
+    width: 200px;
+    margin-left: -200px;
+}
+
+.right {
+    width: 800px;
+    background-color: greenyellow;
+}
+```
+
+```css
+ .container {
+    color: pink;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: stretch;
+}
+
+.left {
+    flex: 200px 0 0;
+    background-color: green;
+}
+
+.right {
+    flex: auto 1 0;
+    background-color: greenyellow;
+}
+```
+
+
+```css
+.container {
+    color: pink;
+    display: grid;
+    grid-template-columns: 200px auto;
+}
+
+.left {
+    background-color: green;
+}
+
+.right {
+    background-color: greenyellow;
+}
+```
+```css
+.container {
+    color: pink;
+    display: table;
+    overflow: hidden;
+}
+
+.left {
+    width: 200px;
+    display: table-cell;
+    background-color: green;
+}
+
+.right {
+    width: 800px;
+    display: table-cell;
+    background-color: greenyellow;
+}
+```
+
+```css
+.container {
+    overflow: hidden;
+    background: linear-gradient(90deg, #4caf50 0, #4caf50 20%, #99afe0 20%, #99afe0);
+}
+
+.left {
+    float: left;
+    width: 200px;
+}
+
+.right {
+    float: left;
+    width: 800px;
+}
+```
