新增计时器

--- a/面试题/计时器.md
+++ b/面试题/计时器.md
@@ -16,3 +16,47 @@ export default function App() {
   );
 }
 ```
+
+
+```js
+export default function App() {
+  const [seconds, setSeconds] = useState(0);
+
+  useEffect(() => {
+    const id = setInterval(() => {
+      setSeconds((seconds) => seconds + 1);
+    }, 1000);
+    return () => {
+      clearInterval(id);
+    };
+  }, []);
+  return (
+    <div className="App">
+      <h1>{Math.floor(seconds)}</h1>
+      <h2>Start editing to see some magic happen!</h2>
+    </div>
+  );
+}
+```
+
+
+```jsx
+export default function App() {
+  const [seconds, setSeconds] = useState(0);
+
+  useEffect(() => {
+    const id = setTimeout(() => {
+      setSeconds(seconds + 1);
+    }, 1000);
+    return () => {
+      clearInterval(id);
+    };
+  }, [seconds]);
+  return (
+    <div className="App">
+      <h1>{Math.floor(seconds)}</h1>
+      <h2>Start editing to see some magic happen!</h2>
+    </div>
+  );
+}
+```
