--- a/性能/项目性能优化.md
+++ b/性能/项目性能优化.md
@@ -76,3 +76,38 @@ let options = {};
 let observer = new IntersectionObserver(callback, options);
 observer.observe(document.getElementById('test'))
 ```
+
+### useCallback如何做性能优化的
+```jsx
+export default function App() {
+  const [seconds, setSeconds] = useState(0);
+  const [time, setTime] = useState(0);
+  useEffect(() => {
+    const id = setInterval(() => {
+      setSeconds((seconds) => seconds + 1);
+    }, 1000);
+    return () => {
+      clearInterval(id);
+    };
+  }, []);
+  const handleClick = useCallback(() => {
+    console.log({ seconds });
+  }, []);
+  return (
+    <div className="App">
+      <h1>{Math.floor(seconds)}</h1>
+      <Child time={Math.floor(time)} handleClick={handleClick} />
+    </div>
+  );
+}
+
+const Child = React.memo((props) => {
+  console.log("render");
+  return <div>{props.time} </div>;
+});
+
+```
+
+父组件传递通过props传值给child，父组件重新渲染，会引起子组件重新渲染
+1. 当传值没有改变，可以通过 React.memo 禁用掉子组件重新渲染
+2. 当传递方法 handleClick，因为每次父组件重新渲染 handleClick 都会生成一个新的引用，所以会引起 Child 组件的重新渲染，这时可以通过 useCallback ，防止handleClick重新生成新引用
