--- a/React-imvc/原理.md
+++ b/React-imvc/原理.md
@@ -322,3 +322,8 @@ let reduxStore = __REDUX_DEVTOOLS_EXTENSION__(
     }
   });
 ```
+
+###服务端渲染弊端
+服务端渲染的目的有两个：一是SEO，二是加快内容展现。在带来这两个好处的同时，我们也需要评估服务端渲染的成本，首先我们需要服务端的支持，因此涉及到了到了服务构建、部署等，同时我们的 web 项目是一个流量较大的网站，也需要考虑服务器的负载，以及相应的缓存策略，特别是一些外卖行业，由于地理位置的不同，不同用户看到的页面也是不一样的，也就是所谓的千人千面，这也为缓存造成了一定困难。
+
+
