--- a/性能/性能时间.md
+++ b/性能/性能时间.md
@@ -3,21 +3,52 @@
 
 
 ### 页面性能
-performance.timing
+#### performance.timing
 ![页面性能图片.png](http://ww1.sinaimg.cn/large/92babc53gy1gir3x5qtffj20oj0endil.jpg)
 
-DNS解析耗时: domainLookupEnd - domainLookupStart
-TCP连接耗时: connectEnd - connectStart
-SSL安全连接耗时: connectEnd - secureConnectionStart
-网络请求耗时(TTFB): responseStart - requestStart
-数据传输耗时: responseEnd - responseStart
-DOM解析耗时: domInteractive - responseEnd
-资源加载耗时: loadEventStart - domContentLoadedEventEnd
-首包时间: responseStart - domainLookupStart
-首次渲染时间 / 白屏时间: responseEnd - fetchStart
-首次可交互时间: domInteractive - fetchStart
-DOM Ready时间: domContentLoadEventEnd - fetchStart
-页面完全加载时间: loadEventStart - fetchStart
+- navigationStart:开始导航到当前页面的时间
+- unloadEventStart：前一个页面unload事件开始时间
+- unloadEventEnd：前一个页面unload事件结束时间
+- redirectStart：到当前页面的重定向开始的时间，只有在前一个页面来自同一域时这个属性才有值，否则为0
+- redirectEnd：到当前页面的重定向结束的时间，只有在前一个页面来自同一域时这个属性才有值，否则为0
+- fetchStart：开始通过HTTP Get取得页面的时间
+- domainLookupStart:开始查询页面当前DNS的时间
+- domainLookupEnd
+- connectStart：浏览器尝试连接服务器的时间
+- connectEnd
+- secureConnectionStart：浏览器尝试以SSL方式连接服务器的时间
+- requestStart：浏览器开始请求页面的时间
+- responseStart：浏览器接收到页面第一个字节的时间
+- responseEnd
+- domLoading:document.readyState变为loading的时间
+- domInteractive:document.readyState变为interactive的时间
+- domContentLoadedEventStart：发生DOMContentLoaded事件的时间
+- DOMContentLoadedEventEnd：DOMContentLoaded事件已经发生且执行完所有事件处理程序的时间
+- domComplete:document.readyState变为complete的时间
+- loadEventStart：发生load事件的时间
+- loadEventEnd：load事件已经发生且执行完所有事件处理程序的时间。
+
+
+- DNS解析耗时: domainLookupEnd - domainLookupStart
+- TCP连接耗时: connectEnd - connectStart
+- SSL安全连接耗时: connectEnd - secureConnectionStart
+- 网络请求耗时(TTFB): responseStart - requestStart
+- 数据传输耗时: responseEnd - responseStart
+- DOM解析耗时: domInteractive - responseEnd
+- 资源加载耗时: loadEventStart - domContentLoadedEventEnd
+- 首包时间: responseStart - domainLookupStart
+- 首次渲染时间 / 白屏时间: responseEnd - fetchStart
+- 首次可交互时间: domInteractive - fetchStart
+- DOM Ready时间: domContentLoadEventEnd - fetchStart
+- 页面完全加载时间: loadEventStart - fetchStart
+
+#### performance.navigation，包含着与页面导航有关的多个属性
+- redirectCount 页面加载前的重定向次数
+- type 刚刚发生的导航类型
+    - performance.navigation.TYPE_NAVIGATE(0) 页面第一次加载
+    - performance.navigation.TYPE_RELOAD(1) 页面重载过
+    - performance.navigation.TYPE_BACK_FORWARD(2) 页面是通过后退或前进按钮打开的。
+
 
 
 |核心频道页面 |UV| 峰值|
