--- a/性能/项目介绍.md
+++ b/性能/项目介绍.md
@@ -153,6 +153,8 @@ function updateIsVisible() {
 - 倒计时 requestAnimationFrame 和 setInterval
 setInterval问题：
 JavaScript语言的一大特点就是单线程，也就是说，同一个时间只能做一件事。这与它的用途有关。作为浏览器脚本语言，JavaScript的主要用途是与用户互动，以及操作DOM。这决定了它只能是单线程，否则会带来很复杂的同步问题。
+**setTimeout 和 setInterval，为他们传入的第二个参数，实际上只是指定了把动画代码添加到浏览器UI线程队列中以等待执行的时间。**
+
 
 setState并不是真正意义上的异步操作，它只是模拟了异步的行为。
 React中会去维护一个标识（isBatchingUpdates），判断是直接更新还是先暂存state进队列。setTimeout以及原生事件都会直接去更新state，因此可以立即得到最新state。而合成事件和React生命周期函数中，是受React控制的，其会将isBatchingUpdates设置为 true，从而走的是类似异步的那一套。
