--- a/性能/项目性能优化.md
+++ b/性能/项目性能优化.md
@@ -111,3 +111,35 @@ const Child = React.memo((props) => {
 父组件传递通过props传值给child，父组件重新渲染，会引起子组件重新渲染
 1. 当传值没有改变，可以通过 React.memo 禁用掉子组件重新渲染
 2. 当传递方法 handleClick，因为每次父组件重新渲染 handleClick 都会生成一个新的引用，所以会引起 Child 组件的重新渲染，这时可以通过 useCallback ，防止handleClick重新生成新引用
+
+
+
+### 代码风格优化性能
+最小化语句数
+1. 多个变量声明合并为1个
+2. 迭代值 `var name = values[i++]`
+3. 使用数组和对象字面量声明
+
+4. 多个if-else转换成单个switch语句可以得到更快的代码，还可以通过case顺序按照最可能最不可能的顺序进行组织，来优化switch语句
+5. 位运算符较快，诸如取模，逻辑与逻辑或可以考虑用位运算来替换。
+
+- 使用 & 判断奇偶数 偶数&1=0 ，奇数&1=1
+- 使用~~，>>,<<,>>>,|取整
+```js
+console.log(~~ 6.83)    // 6
+console.log(6.83 >> 0)  // 6
+console.log(6.83 << 0)  // 6
+console.log(6.83 | 0)   // 6
+// >>>不可对负数取整
+console.log(6.83 >>> 0)   // 6
+```
+
+- 使用^来完成值交换
+```js
+var a = 5
+var b = 8
+a ^= b
+b ^= a
+a ^= b
+```
+
