最长无重复子串

--- a/Javascript/源码实现.md
+++ b/Javascript/源码实现.md
@@ -655,3 +655,89 @@ Array.prototype.concat.apply([],arguments)
 
 ❓为什么 Array.prototype.slice.call()方法可以将任何非数组对象转换为数组对象？
 因为call改变了执行的上下文环境
+
+
+### 实现函数柯里化
+```js
+function curry(Sum, ...args) {
+    let curryArgs = args
+    if (curryArgs.length >= Sum.length) {
+        return Sum(...args)
+    }
+    return function (...newArgs) {
+        let newCurryArgs = [...curryArgs, ...newArgs]
+        return curry(Sum, ...newCurryArgs)
+    }
+}
+
+function Sum(num1, num2, num3) {
+    return num1 + num2 + num3
+}
+
+const result = curry(Sum, 1)(2)(3)
+```
+
+```js
+function add() {
+    let allArgs = [...arguments];
+
+    const Fn = function () {
+        allArgs.push(...arguments);
+        return Fn;
+    };
+
+    Fn.toString = function () {
+        return allArgs.reduce(function (a, b) {
+            return a + b;
+        });
+    }
+    return Fn;
+}
+
+console.log(add(1,2)(2, 3)(4).toString())  //10
+```
+
+
+### 封装一个将传入函数包装成支持柯里化函数的函数
+```js
+function currying(fn) {
+    let args_arr = []
+    let max_length = fn.length
+    let closure = function (...args) {
+        args_arr = args_arr.concat(args)
+        if (args_arr.length < max_length) return closure
+        return fn(...args_arr)
+    }
+    return closure
+}
+
+function add(x, y, z) {
+    return x + y + z
+}
+
+curriedAdd = currying(add)
+console.log(curriedAdd(1)(2)(3))
+```
+
+
+### 最长无重复子串
+```js
+const lengthOfLongestSubstring = function (s) {
+    let window = {}
+    let left = 0
+    let right = 0
+    let max = 0
+    while (right < s.length) {
+        let c = s[right]
+        right++
+        window[c] ? window[c]++ : window[c] = 1
+        while (window[c] > 1) {
+            let d = s[left]
+            left++
+            window[d--]
+        }
+        max = Math.max(max, right - left)
+    }
+    return max
+}
+```
