封装一个JavaScript的类型判断函数

--- a/ES6/方法汇总.md
+++ b/ES6/方法汇总.md
@@ -358,10 +358,38 @@ var sum = nums.reduce((x, y) => x + y);
 console.log(sum); 
 // returns 14
 ```
+
+### 14. isNaN 和 Number.isNaN函数的区别
+函数 isNaN 接收参数后，会尝试将这个参数转换为数值，任何不能被转换为数值的的值都会返 回 true，因此非数字值传入也会返回 true 
+函数 Number.isNaN 会首先判断传入参数是否为数字，如果是数字再继续判断是否为 NaN ，这种方法对于 NaN 的判断更为准确。
+
+
+### 封装一个JavaScript的类型判断函数
+```js
+function getType(value) {
+    if (value === null) return value + ''
+    if (typeof value === "object") {
+        let valueClass = Object.prototype.toString.call(value)
+        type = valueClass.split(' ')[1].split('')
+        type.pop()
+        return type.join('').toLowerCase()
+    } else {
+        return typeof value
+    }
+}
+```
+
+### 什么情况下会发生布尔值的隐式强制类型转换
+1. if (..) 语句中的条件判断表达式。
+2. for ( .. ; .. ; .. ) 语句中的条件判断表达式（第二个）
+3. while (..) 和 do..while(..) 循环中的条件判断表达式。
+4. ? : 中的条件判断表达式。
+5. 逻辑运算符 ||（逻辑或）和 &&（逻辑与）左边的操作数（作为条件判断表达式）。
 ### 结论
 
 ### 数组方法
 - every
 - some
+
 
 
