页面性能优化

--- a/性能/项目性能优化.md
+++ b/性能/项目性能优化.md
@@ -1,3 +1,5 @@
+
+
 1. 图片懒加载
 > 以跟团游首页为例，无懒加载图片请求54，图片消耗流量3.5M；加了图片懒加载，图片请求数36，图片消耗流量2.2M
 - 优化首屏体验（不被非首屏图片请求阻塞）
@@ -143,3 +145,112 @@ b ^= a
 a ^= b
 ```
 
+### 除以2并向下取整
+```js
+b>>>1
+```
+
+
+[参考文献](https://github.com/SunshowerC/blog/issues/9#%E4%BC%98%E5%8C%96%E6%89%8B%E6%AE%B5)
+### 优化手段
+- 网络
+    用户通过浏览器发起资源请求
+- 资源
+    浏览器下载所需要的资源
+- 渲染
+    浏览器将资源解析处理，渲染页面视图
+
+#### 网络
+输入网址，通过chrome devtools timeline板块
+![资源耗时.png](http://ww1.sinaimg.cn/large/92babc53gy1gkipy65wd6j210b0d7n0g.jpg)
+
+
+请求 timeline 图
+要清楚怎么优化，那么就得知道，这些过程代表什么，其瓶颈又是什么。
+
+- Queued: 进入队列的时间点
+- Started At: 请求开始的时间点
+- Queueing: 排队时间，Started At = Queued + Queueing
+- 有更高优先级的请求在进行（如scripts/styles），这个一般发生在 图片资源的请求上k
+- 根据HTTP1.0/1.1协议规定，一个域名的并发请求量只能限制在6个
+- 浏览器在暂时分配磁盘缓存中的空间
+- stalled: 请求因上述的三种情况被停滞
+- Proxy negotiation: 代理协商耗时
+- DNS Lookup: 域名解析耗时
+- Initial Connect: 连接耗时, 指执行初始TCP握手和协商SSL所花费的时间（如果适用）。缓慢可能是由于拥塞造成的，服务器已达到限制，并且在现有连接未决时无法响应新连接。
+- SSL： 协商 SSL 的耗时
+- Request Sent: 发送请求耗时（很小可忽略）
+- Waitting(TTFB=Time To First Byte): 首字节响应时间，如果这个时间过长，服务器需要升级以提高吞吐效率了
+- Content Download: 资源下载耗时
+
+#### 请求阻塞 (stalled)
+根据HTTP1.0/1.1协议规定，一个域名的并发请求量存在限制,一般情况下，我们的 web 应用有可能会有多个资源，一旦请求资源过多，请求就会被阻塞掉。导致耗时长，影响用户体验。
+
+##### 减少资源请求量
+  小图片资源 base64 编码内联。
+  
+  css sprite : 雪碧图
+  
+  JS 文件合并
+  上线时我们会把所有的代码进行压缩合并，合并成一个文件，这样不管多少模块，都请求一个文件，减少了HTTP的请求数。
+  
+  缺点：文件的缓存。当我们有100个模块时，有一个模块改了东西，按照之前的方式，整个文件浏览器都需要重新下载，不能被缓存。
+  
+##### 多域名
+一个域名存在请求量限制，为什么不把资源放在多个域名下呢？ 比如 github 上就是用了 avatars.githubusercontent.com 等域名 存放头像图片资源，一定程度上提升了响应速度和用户体验。
+
+缺点：多域名，每个新域名都需要重新进行DNS解析(只需解析一次)，DNS的解析时间会变长。
+
+##### HTTP/2(SPDY)
+
+Multiplexed support(one single TCP connection for all requests) : 多路复用
+在同一个 TCP 连接之中并行执行多个请求，不再有 浏览器请求并发限制。
+
+
+                                  
+#### DNS 解析
+我们知道，当我们访问一个网站如 www.amazon.com 时，需要将这个域名先转化为对应的 IP 地址，这是一个非常耗时的过程，当然浏览器有DNS缓存，一旦访问过，再次访问从缓存中读取就会快很多。
+
+##### DNS prefetch
+DNS prefetch 会分析这个页面需要的资源所在的域名，浏览器空闲时提前将这些域名转化为 IP 地址，真正请求资源时就避免了上述这个过程的时间。
+```html
+<meta http-equiv='x-dns-prefetch-control' content='on'>
+<link rel='dns-prefetch' href='http://g-ecx.images-amazon.com'>
+<link rel='dns-prefetch' href='http://z-ecx.images-amazon.com'>
+```
+
+#### 资源
+##### 资源下载的耗时 = 资源大小 / 用户网速。
+
+##### 常规优化
+首先是常规优化操作，即对上述所有资源都通用的优化方法。
+
+##### 打包压缩
+通过构建工具(Grunt/Gulp/webpack等) 打包压缩，混淆加密
+服务器启用 gzip
+##### 缓存
+webpack long-term cache 持久化缓存
+使用 webpack chunkhash 使得构建出来的 bundle 文件拥有固定的 hash 值
+##### 强缓存
+体现为 from disk/memory cache, 具体是 from disk cache 还是 from memory cache 由浏览器自身控制
+
+expires
+Cache-Control
+##### 协商缓存
+协商缓存由服务端控制，体现为 304 not Modified
+
+Etag和If-None-Match
+Last-Modified和If-Since-Modified
+
+##### 抽离第三方库
+
+
+##### 避免 JS 文件阻塞渲染
+首先，我们从上述过程可以看到，js 资源会阻塞 HTML 的解析，那么其实以前我们的常规操作就是把 JS 资源从 head 标签移动到 body 标签的末尾，避免阻塞。
+
+但是随着技术发展，我们已经有更好解决的方案了。
+
+defer / async
+常规的script标签，会阻塞HTML的解析
+defer 会将js先下载下来，但是会等HTML解析完成后，才执行
+async ，同时进行HTML解析与js下载，但js下载完成后立刻停止HTML解析并执行js代码
