动态加载组件

--- a/性能/项目性能优化.md
+++ b/性能/项目性能优化.md
@@ -254,3 +254,25 @@ defer / async
 常规的script标签，会阻塞HTML的解析
 defer 会将js先下载下来，但是会等HTML解析完成后，才执行
 async ，同时进行HTML解析与js下载，但js下载完成后立刻停止HTML解析并执行js代码
+
+
+#### 按需加载组件
+引入项目通过import这种方式引入，通过webpack打包会拆分
+```js
+export default async (templateNames = []) => templateNames.reduce(async (result, templateName) => {
+  let module = null;
+  switch (templateName) {
+    case "FloorGap":
+      module = await import(/* webpackChunkName: "FloorGap" */ "../FloorGap");
+      break;
+    default:
+  }
+  if (module !== null) {
+    return {
+      ...await result,
+      [templateName]: module.default,
+    };
+  }
+  return result;
+}, {});
+```
