--- a/CSS/基础.md
+++ b/CSS/基础.md
@@ -81,3 +81,21 @@ white-space
 |   |  |
 |   |  |
 |   |  |
+
+### 项目怎么做移动端适配
+```html
+<meta
+    name="viewport"
+    content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui, viewport-fit=cover"
+/>
+```
+- width 设置layoutviewport的宽度
+- user-scalable 是否允许用户进行缩放的设置
+- initial-scale 设置页面的初始缩放值，并且这个初始缩放值是相对于 idealviewport 缩放的，最终得到的结果不仅会决定 visualviewport，还会影响到 layoutviewport
+- viewport-fit=cover 视图端口被缩放以填充设备显示
+
+
+### rem
+rem是CSS3新增的一个相对单位（root em，根em），这个单位引起了广泛关注。这个单位与em有什么区别呢？区别在于使用rem为元素设定字体大小时，仍然是相对大小，但相对的只是HTML根元素。
+### em
+
