--- a/Javascript/面向对象.md
+++ b/Javascript/面向对象.md
@@ -2,6 +2,19 @@
 ### 面向对象
 面向对象语言的标志，他们都有类的概念。通过类可以创建多个具有相同属性和方法的对象。
 
+### JavaScript基本数据类型
+- Undefined
+- Null
+- Boolean
+- String
+- Number
+- Symbool
+
+### JavaScript引用类型
+- Object
+- Array
+
+
 #### 理解对象
 JavaScript中有两种属性
 - 数据属性
@@ -289,6 +302,8 @@ function inheritPrototype(subType, superType) {
 构造函数、原型和实例的关系：
 每个构造函数都有一个原型对象，原型对象都包含一个指向构造函数的指针，实例都包含一个指向原型对象的内部指针。假如让原型对象等于另一个类型的实例，那么此时的原型对象将包含一个指向另一个原型的指针
 
+
+JavaScript 只有一种结构：对象。每个实例对象（ object ）都有一个私有属性（称之为 __proto__ ）指向它的构造函数的原型对象（prototype ）。该原型对象也有一个自己的原型对象( __proto__ ) ，层层向上直到一个对象的原型对象为 null。根据定义，null 没有原型，并作为这个原型链中的最后一个环节。
 
 在任何值上调用Object原生的toString方法，都会返回一个[object NativeConstructorName]格式的字符串，每个类在内部都有一个[[Class]] 属性，这个属性中就指定了上述字符串中的构造函数名。
 
