--- a/HTTP/网络安全.md
+++ b/HTTP/网络安全.md
@@ -23,6 +23,9 @@ onClick()
 
 以上就是一个非常典型的 XSS 攻击。为了解决 XSS 攻击，浏览器中引入了内容安全策略，称为 CSP。CSP 的核心思想是让服务器决定浏览器能够加载哪些资源，让服务器决定浏览器是否能够执行内联 JavaScript 代码。通过这些手段就可以大大减少 XSS 攻击。
 
+### CSP(Content-Security-Policy)
+` Content-Security-Policy: default-src 'self' `
+
 2. 跨域资源共享和跨文档消息机制
 在介绍同源策略时，我们说明了如果两个页面不是同源的，则无法相互操纵 DOM。不过在实际应用中，经常需要两个不同源的 DOM 之间进行通信，于是浏览器中又引入了跨文档消息机制，可以通过 window.postMessage 的 JavaScript 接口来和不同源的 DOM 进行通信。
 
@@ -69,6 +72,14 @@ code:<script>alert('你被 xss 攻击了')</script>
 
 ### 什么是 CSRF 攻击
 CSRF 英文全称是 Cross-site request forgery，所以又称为“跨站请求伪造”，是指黑客引诱用户打开黑客的网站，在黑客的网站中，利用用户的登录状态发起的跨站请求。简单来讲，CSRF 攻击就是黑客利用了用户的登录状态，并通过第三方的站点来做一些坏事
+
+#### CSRF流程
+
+1. 受害者登录a.com，并保留了登录凭证（Cookie）。
+2. 攻击者引诱受害者访问了b.com。
+3. b.com 向 a.com 发送了一个请求：a.com/act=xx。浏览器会默认携带a.com的Cookie。
+4. a.com接收到请求后，对请求进行验证，并确认是受害者的凭证，误以为是受害者自己发送的请求。
+5. a.com以受害者的名义执行了act=xx。
 
 1. 自动发起 Get 请求
 黑客将转账的请求接口隐藏在 img 标签内，欺骗浏览器这是一张图片资源。当该页面被加载时，浏览器会自动发起 img 的资源请求，如果服务器没有对该请求做判断的话，那么服务器就会认为该请求是一个转账请求，于是用户账户上的 100 极客币就被转移到黑客的账户上去了。
