--- a/React/性能优化.md
+++ b/React/性能优化.md
@@ -60,8 +60,263 @@ hooks之前，React存在很多问题
 - class组件的this指向问题
 - 难以记忆的生命周期
 
+### context性能优化
+```jsx harmony
+const ThemeContext = React.createContext()
+export function ChildNonTheme(){
+  console.log('render')
+  return <div>我不关心皮肤，皮肤改变的时候让我重新渲染</div>
+}
+
+export function ChildWithTheme() {
+  const theme = useContext(ThemeContext)
+  return <div>我是有皮肤的哦~{theme}</div>
+}
 
 
+export default function App(props) {
+  const [theme, setTheme] = useState("light")
+  const onChangeTheme = () => setTheme(theme === "light" ? "dark" : "light")
+  return (
+    <ThemeContext.Provider value={theme}>
+      <button onClick={onChangeTheme}>改变皮肤</button>
+      <ChildWithTheme />
+      <ChildNonTheme />
+      <ChildNonTheme />
+      <ChildNonTheme />
+      <ChildNonTheme />
+      <ChildNonTheme />
+      <ChildNonTheme />
+      <ChildNonTheme />
+    </ThemeContext.Provider>
+  )
+}
+```
+改变light值，ChildNonTheme也会进行无用的渲染。
+这本质上是由于 `React` 是自上而下递归更新，`<ChildNonTheme />` 这样的代码会被 `babel` 翻译成 `React.createElement(ChildNonTheme)` 这样的函数调用，React官方经常强调 `props` 是`immutable` 的，所以在每次调用函数式组件的时候，都会生成一份新的 `props` 引用。
+
+来看下 createElement 的返回结构：
+```jsx harmony
+const childNonThemeElement = {
+  type: 'ChildNonTheme',
+  props: {} // <- 这个引用更新了
+}
+```
+### 如何避免这种重复渲染
+1. 使用React.memo将组件缓存
+2. 利用children
+```jsx harmony
+
+const ThemeContext = React.createContext()
+
+export function ChildNonTheme() {
+  console.log('render')
+  return <div>我不关心皮肤，皮肤改变的时候让我重新渲染</div>
+}
+
+export function ChildWithTheme() {
+  const theme = useContext(ThemeContext)
+  return <div>我是有皮肤的哦~{theme}</div>
+}
+
+
+export function ThemeApp({ children }) {
+  const [theme, setTheme] = useState("light")
+  const onChangeTheme = () => setTheme(theme === "light" ? "dark" : "light")
+  return (
+    <ThemeContext.Provider value={theme}>
+      <button onClick={onChangeTheme}>改变皮肤</button>
+      {children}
+    </ThemeContext.Provider>
+  )
+}
+
+export default function App() {
+  return (
+    <ThemeApp>
+      <ChildWithTheme />
+      <ChildNonTheme />
+      <ChildNonTheme />
+      <ChildNonTheme />
+      <ChildNonTheme />
+      <ChildNonTheme />
+      <ChildNonTheme />
+      <ChildNonTheme />
+    </ThemeApp>
+  )
+}
+```
+没错，唯一的区别就是我把控制状态的组件和负责展示的子组件给抽离开了，通过 children 传入后直接渲染，由于 children 从外部传入的，也就是说 ThemeApp 这个组件内部不会再有 React.createElement 这样的代码，那么在 setTheme 触发重新渲染后，children 完全没有改变，所以可以直接复用。
+
+让我们再看一下被 ThemeApp 包裹下的 <ChildNonTheme />，它会作为 children 传递给 ThemeApp，ThemeApp 内部的更新完全不会触发外部的 React.createElement，所以会直接复用之前的 element 结果：
+```jsx harmony
+// 完全复用，props 也不会改变。
+const childNonThemeElement = {
+  type: ChildNonTheme,
+  props: {}
+}
+```
+总结下来，就是要把渲染比较费时，但是不需要关心状态的子组件提升到「有状态组件」的外部，作为 children 或者props传递进去直接使用，防止被带着一起渲染。
+
+
+```jsx harmony
+
+const LogContext = React.createContext()
+function LogProvider({ children }) {
+  const [logs, setLogs] = useState([])
+  const addLog = (log) => setLogs((prevLogs) => [...prevLogs, log])
+  return (
+    <LogContext.Provider value={{ logs, addLog }}>
+      {children}
+    </LogContext.Provider>
+  )
+}
+
+function Logger1() {
+  const { addLog } = useContext(LogContext)
+  console.log('Logger1 render')
+  return (
+    <>
+      <p>一个能发日志的组件1</p>
+      <button onClick={() => addLog('logger1')}>发日志</button>
+    </>
+  )
+}
+
+
+function Logger2() {
+  const { addLog } = useContext(LogContext)
+  console.log('Logger2 render')
+  return (
+    <>
+      <p>一个能发日志的组件1</p>
+      <button onClick={() => addLog('logger2')}>发日志</button>
+    </>
+  )
+}
+
+function LogsPanel() {
+  const { logs } = useContext(LogContext)
+  return logs.map((log, index) => <p key={index}>{log}</p>)
+}
+
+export default function App() {
+  return (
+    <LogProvider>
+      <Logger1 />
+      <Logger2 />
+      <LogsPanel />
+    </LogProvider>
+  )
+}
+```
+这样的代码写法会导致每次任意一个组件写入日志以后，所有的 Logger 和 LogsPanel 都发生重新渲染。
+当 LogProvider 中的 addLog 被子组件调用，导致 LogProvider重渲染之后，必然会导致传递给 Provider 的 value 发生改变，由于 value 包含了 logs 和 setLogs 属性，所以两者中任意一个发生变化，都会导致所有的订阅了 LogProvider 的子组件重新渲染。
+
+那么解决办法是什么呢？其实就是读写分离，我们把 logs（读）和 setLogs（写）分别通过不同的 Provider 传递，这样负责写入的组件更改了 logs，其他的「写组件」并不会重新渲染，只有真正关心 logs 的「读组件」会重新渲染。
+
+```jsx harmony
+const LogStateContext = React.createContext()
+const LogDispatcherContext = React.createContext()
+function LogProvider({ children }) {
+  const [logs, setLogs] = useState([])
+  const addLog = useCallback((log) => setLogs((prevLogs) => [...prevLogs, log]), [])
+  return (
+    <LogDispatcherContext.Provider value={addLog}>
+      <LogStateContext.Provider value={logs}>
+        {children}
+      </LogStateContext.Provider>
+    </LogDispatcherContext.Provider>
+  )
+}
+
+function Logger1() {
+  const addLog = useContext(LogDispatcherContext)
+  console.log('Logger1 render')
+  return (
+    <>
+      <p>一个能发日志的组件1</p>
+      <button onClick={() => addLog('logger1')}>发日志</button>
+    </>
+  )
+}
+
+
+function Logger2() {
+  const addLog = useContext(LogDispatcherContext)
+  console.log('Logger2 render')
+  return (
+    <>
+      <p>一个能发日志的组件1</p>
+      <button onClick={() => addLog('logger2')}>发日志</button>
+    </>
+  )
+}
+
+function LogsPanel() {
+  const logs = useContext(LogStateContext)
+  return logs.map((log, index) => <p key={index}>{log}</p>)
+}
+
+export default function App() {
+  return (
+    <LogProvider>
+      <Logger1 />
+      <Logger2 />
+      <LogsPanel />
+    </LogProvider>
+  )
+}
+```
+
+假设我们使用上面的办法管理一些全局的小状态，Provider 变的越来越多了，有时候会遇到嵌套地狱的情况：
+```jsx harmony
+const StateProviders = ({ children }) => (
+  <LogProvider>
+    <UserProvider>
+      <MenuProvider>
+        <AppProvider>
+          {children}
+        </AppProvider>
+      </MenuProvider>
+    </UserProvider>
+  </LogProvider>
+)
+
+function App() {
+  return (
+    <StateProviders>
+      <Main />
+    </StateProviders>
+  )
+}
+```
+有没有办法解决呢？当然有，我们参考 redux 中的 compose 方法，自己写一个 composeProvider 方法：
+```jsx harmony
+function composeProviders(...providers) {
+  return ({ children }) =>
+    providers.reduce(
+      (prev, Provider) => <Provider>{prev}</Provider>,
+      children,
+    )
+}
+代码就可以简化成这样：
+
+const StateProviders = composeProviders(
+  LogProvider,
+  UserProvider,
+  MenuProvider,
+  AppProvider,
+)
+
+function App() {
+  return (
+    <StateProvider>
+      <Main />
+    </StateProvider>
+  )
+}
+```
 ### jQuery 和 React 框架比较
 #### 性能比较
 jQuery基本都是浏览器原生操作，实计上h5的很多api都借鉴了jQuery.基本上元素选择和更新都是使用浏览器原生的接口，这些操作几乎都没有性能损耗。所以说jQuery 操作DOM的性能还是比较好的。
