--- a/Javascript/面向对象.md
+++ b/Javascript/面向对象.md
@@ -320,3 +320,11 @@ function Person(name, age, job) {
     }
 }
 ```
+
+### JavaScript对象的赋值，是引用的赋值
+let obj1 = {
+    a:1,
+    b:2
+}
+let obj2 = obj1
+obj2.c=3
