--- a/算法/左程云.md
+++ b/算法/左程云.md
@@ -283,3 +283,36 @@ function maxSum(arr) {
 #### 数组中局部最小的位置
 
 
+### 长度最小的子数组
+滑动窗口
+```js
+var minSubArrayLen = function (s, nums) {
+    const max = Number.MAX_SAFE_INTEGER
+    let i = 0, sum = 0, ans = max
+    for (let j = 0; j < nums.length; j++) {
+        sum += nums[j]
+        while (sum >= s) {
+            ans = Math.min(ans, j - i + 1)
+            sum -= nums[i++]
+        }
+    }
+    return ans === max ? 0 : ans
+}
+```
+
+### 求子数组最大和
+```js
+var maxSubArray = function (nums) {
+    let ans = nums[0]
+    let sum = 0
+    for (const num of nums) {
+        if (sum > 0) {
+            sum += num
+        } else {
+            sum = num
+        }
+        ans = Math.max(ans, sum)
+    }
+    return ans
+};
+```
