--- a/算法/左程云.md
+++ b/算法/左程云.md
@@ -316,3 +316,23 @@ var maxSubArray = function (nums) {
     return ans
 };
 ```
+
+### 表现良好时间段
+```js
+var longestWPI = function (hours) {
+    hours = hours.map(hour => hour > 8 ? 1 : -1)
+    const n = hours.length
+    let res = 0
+    for (let i = 0; i < n; i++) {
+        let count = 0
+        for (let j = i; j < n; j++) {
+            count += hours[j]
+            if (count > 0) {
+                res = Math.max(res, j - i + 1)
+            }
+        }
+        if (n - i <= res) return res
+    }
+    return res
+};
+```
