--- a/Javascript/设计模式.md
+++ b/Javascript/设计模式.md
@@ -124,6 +124,7 @@ const validateFunc = function () {
 
 const registerForm = document.getElementById('registerForm')
 registerForm.onsubmit = function () {
+
     const errorMsg = validateFunc()
     if (errorMsg) {
         console.log(errorMsg)
@@ -586,3 +587,11 @@ const addressAdapter = function (oldAddressfn) {
 }
 render(addressAdapter(getGuangdongCity))
 ```
+
+### 发布订阅
+> 有中间商赚差价
+
+### 观察者
+> 没有中间商赚差价
+
+![发布订阅.png](http://ww1.sinaimg.cn/large/92babc53gy1gknixwywv3j20sg0mu47b.jpg)
