--- a/Javascript/源码实现.md
+++ b/Javascript/源码实现.md
@@ -721,6 +721,7 @@ console.log(curriedAdd(1)(2)(3))
 
 
 ### 最长无重复子串
+> 滑动窗口类问题
 ```js
 const lengthOfLongestSubstring = function (s) {
     let window = {}
