--- a/Javascript/事件代理.md
+++ b/Javascript/事件代理.md
@@ -19,6 +19,7 @@ IE的事件流叫事件冒泡，即事件开始由最具体的元素接收，然
         console.log(e)
     }
     const clickFunc = function (e) {
+
         console.log(e.target.className)
     };
     const div1 = document.getElementsByClassName('div1')[0];
@@ -28,8 +29,23 @@ IE的事件流叫事件冒泡，即事件开始由最具体的元素接收，然
 
 >addEventListener 第三个参数是一个布尔值，若为true，表示在捕获阶段调用事件处理程序；若为false，表示在冒泡阶段调用事件处理程序
 
-### 事件委托
+通过event变量，可以直接访问事件对象，在函数内部，this值等于事件的目标元素
 
+### 事件委托
+事件委托利用事件冒泡，只指定一个事件处理程序，就可以管理某一类型的所有事件
+```js
+document.addEventListener('click', function (event) {
+    const target = event.target
+    switch (target.id) {
+        case 'dosomething':
+            document.title = 'dosomething'
+            break
+        case 'gosomewhere':
+            location.href = 'https://'
+            break
+    }
+})
+```
 
 ### target & currentTarget
 在事件处理程序内部，对象this始终等于currentTarget，而target只包含事件的实际目标。如果直接将事件处理程序指定给了目标元素，this、target、currentTarget包含相同的值
@@ -38,3 +54,6 @@ IE的事件流叫事件冒泡，即事件开始由最具体的元素接收，然
 ### 阻止事件的默认行为
 - preventDefault，只有在cancelable属性为true，才可以使用preventDefault来取消默认行为
 - stopPropagation 方法用于立即停止事件在DOM层次中的传播，即取消进一步的事件捕获或者事件冒泡
+
+
+window 的 onload 事件会在页面的一切都加载完毕时触发，DOMContentLoaded事件会在形成完整的DOM树之后触发。
