--- a/Javascript/视区.md
+++ b/Javascript/视区.md
@@ -1,7 +1,9 @@
 ### scrollHeight
 ### offsetHeight
 ### clientHeight
+元素内容及其内边距所占据的空间大小
 ### scrollWidth
+在没有滚动条情况下，元素内容的总宽度
 ### offsetWidth
 
 ### scrollTop
@@ -24,4 +26,24 @@ window.screen.availHeight;
 window.screen.availWidth;
 window.screen.colorDepth;
 window.screen.deviceXDPI
+```
+
+- clientX/clientY 事件发生时鼠标指针在视口中的水平和垂直坐标
+- pageX/pageY 鼠标光标在页面中的位置
+- pageX = event.clientX + (document.body.scrollLeft)
+- screenX 鼠标指针相对于整个屏幕的坐标信息
+- offsetX 光标相对于目标元素边界的X坐标
+
+
+要想知道某个元素在页面上的偏移量，将这个元素的offsetLeft和offsetTop与其offsetParent的相同属性相加。
+```js
+function getElementLeft(element) {
+    let actualLeft = element.offsetLeft
+    let current = element.offsetParent
+    while (current !== null) {
+        actualLeft += current.offsetLeft
+        current = current.offsetLeft
+    }
+    return actualLeft
+}
 ```
