--- a/Javascript/面向对象.md
+++ b/Javascript/面向对象.md
@@ -328,3 +328,20 @@ let obj1 = {
 }
 let obj2 = obj1
 obj2.c=3
+
+
+#### 基本类型的值应该用typeof检测，对象的值应该用instanceof检测
+
+- 对于查询字符串，应该记住必须要使用`encodeURIComponent`方法
+- error(message) 
+- info(message)
+- log(message)
+- warn(message)
+
+### 事件
+事件流描述的是从页面中接收事件的顺序
+
+事件冒泡，事件开始时由最具体的元素接收，然后逐级向上传播到较为不具体的结点
+事件捕获，不太具体的节点应该更早接收到事件，最具体的节点应该最后接收到事件
+
+事件流包括：事件捕获，处于目标，事件冒泡三个阶段。事件捕获为截获事件提供机会，冒泡阶段对事件作出响应
