--- a/Javascript/面向对象.md
+++ b/Javascript/面向对象.md
@@ -345,3 +345,80 @@ obj2.c=3
 事件捕获，不太具体的节点应该更早接收到事件，最具体的节点应该最后接收到事件
 
 事件流包括：事件捕获，处于目标，事件冒泡三个阶段。事件捕获为截获事件提供机会，冒泡阶段对事件作出响应
+
+
+### 函数表达式
+函数声明的重要特征：函数声明提升
+```js
+// 函数声明
+function functionName(arg0, arg1, arg2) {}
+// 匿名函数
+const sayHi = function() {}
+```
+
+当某个函数被调用时，会创建一个执行环境（execution context）及相应的作用域链。然后，使用arguments和其他命名参数的值来初始化函数的活动对象。作用域链的终点为全局执行环境。
+
+闭包是指有权访问另一个函数作用域中的变量的函数。
+闭包副作用，闭包只能取得包含函数中任何变量的最后一个值，闭包所保存的是整个变量对象，而不是某个特殊的变量。
+```js
+function createFunctions() {
+    const result = []
+    for(var i =0;i<10;i++){
+        result[i] = function () {
+            return i
+        }
+    }
+    return result
+}
+```
+每个函数的作用域链中都保存着createFunctions函数的活动对象，所以他们引用的是同一个变量i
+```js
+function createFunctions() {
+    const result = []
+    for(var i =0;i<10;i++){
+        result[i] = function (num) {
+            return num
+        }(i)
+    }
+    return result
+}
+```
+
+### this
+this对象是在运行时基于函数的执行环境绑定的。在全局函数中，this等于window，而当函数被作为某个对象的方法调用时，this等于那个对象。不过，匿名函数的执行环境具有全局性，因此其this对象通常指向window
+
+```js
+const obj = {
+    name: 'my object',
+    getNameFunc: function () {
+        return function () {
+            return this.name
+        }
+    }
+}
+```
+每个函数在函数调用时都会自动获取两个特殊变量：this和arguments，内部函数在搜索这两个变量时，只会搜索到其活动对象为止，因此永远不可能直接访问外部函数的这两个变量。不过，把外部作用域中的this对象保存在一个闭包能够访问到的变量里，就可以让闭包访问该对象了。
+```js
+const obj = {
+    name: 'my object',
+    getNameFunc: function () {
+        const that = this
+        return function () {
+            return that.name
+        }
+    }
+}
+```
+
+#### 块级作用域
+```js
+function x() {
+  
+}() //出错
+```
+上面代码会报错，因为JavaScript将function关键字当做一个函数声明的开始，函数声明后面不能跟圆括号。然而，函数表达式后面可以跟圆括号。要讲函数声明转换成函数表达式，只要加一个括号
+```js
+(function() {
+  
+})()
+```
