--- a/Javascript/面向对象.md
+++ b/Javascript/面向对象.md
@@ -78,8 +78,21 @@ function createPerson(name,age,job) {
 优点：创建自定义的构造函数意味着将来可以将它的实例标识为一种特定的类型
 缺点：每个方法都要在每个实例上重新创建一遍
 
-- 原型模式
+```js
+function Person(name, age, job) {
+    this.name = name
+    this.age = age
+    this.job = job
+    this.sayname = sayname
+}
 
+function sayname() {
+    console.log(this.name)
+}
+```
+
+- 原型模式
+我们创建的每个函数都有一个prototype属性，这个属性是一个指针，指向一个对象。这个对象的用途是包含可以由特定类型的所有实例共享的属性和方法。prototype就是通过调用构造函数而创建的那个对象实例的原型对象。
 ```js
 function createPerson() {
 }
@@ -422,3 +435,19 @@ function x() {
   
 })()
 ```
+
+对象的constructor属性最初是用来标识对象类型的，但是类型检测还是instanceof靠谱。创建自定义的构造函数意味着可以将它的实例标识为一种特定的类型。
+
+原型对象
+只要创建了一个新函数，就会根据特定的规则为该函数创建一个prototype属性，这个属性指向函数的原型对象。默认情况下，所有原型对象都会自动获得一个constructor属性，
+这个属性是一个指向prototype属性所在函数的指针。
+创建了自定义的构造函数之后，其原型对象默认只会取得constructor属性，其他方法都是从object继承来的。当调用构造函数创建一个新实例后，该实例的内部将包含一个指针属性，指向构造函数的原型对象。
+
+判断是否有原型关系
+isPrototypeOf
+Object.getPrototypeOf
+hasOwnproperty可以检测一个属性是在实例中还是在原型中
+使用delete操作符可以完全删除实例属性
+in操作符会在通过对象能够访问给定属性时返回true，无论该属性在实例中还是原型中。for-in返回所有能够通过对象访问，可枚举的属性。包括实例中，原型中。要想得到所有实例属性，无论是否可枚举 Object.getOwnPropertyNames
+要取得对象上所有可枚举的实例属性，可使用Object.keys
+
