--- a/Javascript/源码实现.md
+++ b/Javascript/源码实现.md
@@ -743,6 +743,22 @@ const lengthOfLongestSubstring = function (s) {
 }
 ```
 
+### 实现reduce
+```js
+function reduce(arr, reduceCallback, initialValue) {
+    if (!Array.isArray(arr) || !arr.length || typeof reduceCallback !== 'function') {
+        return [];
+    } else {
+        let hasInitialValue = initialValue !== undefined;
+        let value = hasInitialValue ? initialValue : arr[0];
+        for (let i = hasInitialValue ? 0 : 1, len = arr.length; i < len; i++) {
+            value = reduceCallback(value, arr[i], i, arr);
+        }
+        return value;
+    }
+}
+```
+
 ### 封装一个JavaScript的类型判断函数
 
 
