--- a/HTTP/页面渲染过程.md
+++ b/HTTP/页面渲染过程.md
@@ -86,6 +86,32 @@ chrome会为每个页面分配一个渲染进程
 - defer 先下载文件，等待HTML解析完成后顺序执行
 - 都没有，阻塞渲染流程直到 JS 执行完毕
 
+##### 普通script标签
+```html
+<script src="a.js"/>
+```
+- 停止解析document
+- 请求a.js
+- 执行a.js中的脚本
+- 继续解析document
+
+##### defer
+```html
+<script src="b.js" defer></script>
+<script src="e.js" defer></script>
+```
+- 不阻止解析 document， 并行下载 d.js, e.js
+- 即使下载完 d.js, e.js 仍继续解析 document
+- 按照页面中出现的顺序，在其他同步脚本执行后，DOMContentLoaded 事件前 依次执行 d.js, e.js。
+
+##### async
+```html
+<script src="b.js" async></script>
+<script src="c.js" async></script>
+```
+- 不阻止解析 document, 并行下载 b.js, c.js
+- 当脚本下载完后立即执行。（两者执行顺序不确定，执行阶段不确定，可能在 DOMContentLoaded 事件前或者后 ）
+
 CSSOM树 和 DOM树构建完成后会开始生成render树，确定页面元素的布局，样式等
 
 在生成render树的过程中，浏览器开始调用GPU绘制，合成图层。
