--- a/React/生命周期.md
+++ b/React/生命周期.md
@@ -27,10 +27,12 @@ constructor(props) {
 #### static getDerivedStateFromProps(nextProps, prevState)
     - 他应该返回一个对象来更新state，如果返回null则不更新任何内容。
     - 适用于 state 的值在任何时候都取决于 props
-    - 特点：每次渲染前触发此方法。UNSAFE_componentWillReceiveProps仅在父组件更新渲染时触发，而不是在内部调用setState时。
+    - 特点：**每次渲染前触发此方法**。UNSAFE_componentWillReceiveProps仅在父组件更新渲染时触发，而不是在内部调用setState时。
     
+    
+**getDerivedStateFromProps和componentWillReceiveProps，只要父级重新渲染时，这两个生命周期就会重新调用，不管props有没有变化**
 该函数会在挂载时，接收到新的props，调用了setState和forceUpdate时被调用
-getDerivedStateFromProps 与 componentDidUpdate一起将会替换掉所有的 componentWillReceiveProps。
+getDerivedStateFromProps 与 componentDidUpdate 一起将会替换掉所有的 componentWillReceiveProps。
 
 #### render
 > render方法中不要做异步请求、改变state、引起副作用
@@ -124,3 +126,8 @@ if (promiseList.length) {
     await Promise.all(promiseList)
 }
 ```
+
+
+### 受控/非受控
+用props传入数据，组件可以被认为是受控的
+数据只保存在组件内部的state，是非受控的
