--- a/React/生命周期.md
+++ b/React/生命周期.md
@@ -32,6 +32,8 @@ constructor(props) {
     
 **getDerivedStateFromProps和componentWillReceiveProps，只要父级重新渲染时，这两个生命周期就会重新调用，不管props有没有变化**
 该函数会在挂载时，接收到新的props，调用了setState和forceUpdate时被调用
+
+getSnapShotBeforeUpdate在最近一次渲染输出之前调用。它使得组件能在发生更改之前从DOM捕获一些信息。
 getDerivedStateFromProps 与 componentDidUpdate 一起将会替换掉所有的 componentWillReceiveProps。
 
 #### render
@@ -41,13 +43,17 @@ getDerivedStateFromProps 与 componentDidUpdate 一起将会替换掉所有的 c
 ### 更新
 #### static getDerivedStateFromProps
 #### shouldComponentUpdate(nextProps, nextState)
-shouldComponentUpdate生命周期中不能做setState
+shouldComponentUpdate生命周期中不能做setState。根据 shouldComponentUpdate() 的返回值，判断 React 组件的输出是否受当前 state 或 props 更改的影响。默认行为是 state 每次发生变化组件都会重新渲染。大部分情况下，你应该遵循默认行为。
+
+此方法仅作为性能优化的方式而存在。不要企图依靠此方法来“阻止”渲染，因为这可能会产生 bug。你应该考虑使用内置的 PureComponent 组件，而不是手动编写 shouldComponentUpdate()。PureComponent 会对 props 和 state 进行浅层比较，并减少了跳过必要更新的可能性。
+返回 false 并不会阻止子组件在 state 更改时重新渲染。
+
 #### render
 render生命周期中不能setState
 #### getSnapshotBeforeUpdate(prevProps, prevState)
     - 在最近一次渲染输出之前调用，在组件发生改变之前从DOM捕获一些信息。此生命周期的任何返回值将作为参数传递给componentDidUpdate，getSnapshotBeforeUpdate 配合 componentDidUpdate 可以取代 componentWillUpdate。
 #### componentDidUpdate(prevProps, prevState, snapshot)
-
+如果组件实现了getSnapShotBeforeUpdate，则他的返回值将作为componentDidUpdate的第三个参数传递，否则此参数为undefined
 可以在 componentDidUpdate 中 setState， 但是 必须被终止条件包裹，否则会引起无限循环
 
 ### 卸载
@@ -131,3 +137,16 @@ if (promiseList.length) {
 ### 受控/非受控
 用props传入数据，组件可以被认为是受控的
 数据只保存在组件内部的state，是非受控的
+
+
+### 接口请求在哪个生命周期
+- componentDidMount
+- componentDidUpdate
+
+### setState在哪个生命周期
+- constructor中不要调用setState
+- componentWillUnMount中不应调用setState。因为组件永远不会重新渲染
+- shouldComponentUpdate生命周期中不能做setState
+- 可以在componentDidMount中直接调用setState。它将触发额外渲染，但此渲染会发生在浏览器更新屏幕之前。如此保证了即使在 render() 两次调用的情况下，用户也不会看到中间状态。
+要避免在构造函数中引入任何副作用和订阅。遇到此场景，将对应的操作放在componentDidMount中。
+- 可以在 componentDidUpdate中直接调用setState，但必须被包裹在一个条件语句里，否则会导致死循环。他还会导致额外的渲染，虽然用户看不见，但是会影响性能。
