--- a/HTTP/网络安全.md
+++ b/HTTP/网络安全.md
@@ -1,3 +1,9 @@
+### why HTTPS
+页面上弹出来一些广告，广告的域名是不同的，是因为网站被运营商劫持了，它往你的html里面注入了一段广告的html。
+劫持也叫http劫持只发生在http连接上，而https的连接是没这个问题的，基本只要打开的是https的网页都不会被注入广告。因为传输的数据都是加密的，中间人收到的是一串无法解密的文本，它也不知道怎么篡改。
+因为如果是http连接你的数据在网络上都是明文传输的，包括你的密码等敏感信息，你和服务器之间经过的路由都可以嗅探到你的数据，可以做些修改如嵌入一个广告，做一些破坏，或者只单纯的抓取信息如邮件内容、账号密码等。
+https升级后的问题是：加密和解密需要占用更多的CPU，并且加密后的数据会变大，但是据笔者观察加上gzip压缩之后，https传输的内容大小几乎和http一样。除了正常的tcp连接之外，还要建立ssl连接，这个时间一般在0.3s ~ 0.5s左右，这个是需要付出点代价的
+
 ### 网络安全
 如果两个 URL 的协议、域名和端口都相同，我们就称这两个 URL 同源。
 具体来讲，同源策略主要表现在 DOM、Web 数据和网络这三个层面。
