--- a/Javascript/面向对象.md
+++ b/Javascript/面向对象.md
@@ -455,3 +455,181 @@ hasOwnproperty可以检测一个属性是在实例中还是在原型中
 in操作符会在通过对象能够访问给定属性时返回true，无论该属性在实例中还是原型中。for-in返回所有能够通过对象访问，可枚举的属性。包括实例中，原型中。要想得到所有实例属性，无论是否可枚举 Object.getOwnPropertyNames
 要取得对象上所有可枚举的实例属性，可使用Object.keys
 
+
+### 闭包
+闭包特性：
+- 闭包可以访问当前函数以外的变量
+```js
+function getOuter(){
+    var date = '815';
+    function getDate(str){
+        console.log(str + date);  //访问外部的date
+    }
+    return getDate('今天是：'); //"今天是：815"
+}
+getOuter();
+```
+- 即使外部函数已经返回，闭包仍能访问外部函数定义的变量
+```js
+function getOuter(){
+    var date = '815';
+    function getDate(str){
+        console.log(str + date);  //访问外部的date
+    }
+    return getDate;     //外部函数返回
+}
+var today = getOuter();
+today('今天是：');   //"今天是：815"
+today('明天不是：');   //"明天不是：815"
+```
+- 闭包可以更新外部变量的值
+```js
+function updateCount(){
+    var count = 0;
+    function getCount(val){
+        count = val;
+        console.log(count);
+    }
+    return getCount;     //外部函数返回
+}
+var count = updateCount();
+count(815); //815
+count(816); //816
+```
+
+#### 闭包应用场景
+- 保护函数内的变量安全：如迭代器、生成器。
+- 在内存中维持变量：如缓存数据、柯里化。
+
+##### 私有属性
+```js
+var foo = (function(){
+    var secret = 'secret'
+    // “闭包”内的函数可以访问 secret 变量，而 secret 变量对于外部却是隐藏的
+    return {
+        get_secret() {
+            return secret
+        },
+        new_secret(new_secret) {
+            secret = new_secret
+        }
+    }
+})()
+
+foo.secret              // undefined
+foo.get_secret()        // 'secret'
+foo.new_secret('哈哈哈') // 修改secret值
+foo.get_secret()        // '哈哈哈'
+```
+
+
+
+```js
+let sque = (function () {
+    let _width = Symbol();
+
+    class Squery {
+        constructor(s) {
+            this[_width] = s
+        }
+        foo() {
+            console.log(this[_width])
+        }
+    }
+    return Squery
+})();
+
+let ss = new sque(20);
+
+ss.foo()    // 20
+console.log(ss[_width]) // ReferenceError: _width is not defined
+```
+
+##### 单例模式
+```js
+class Modal {
+    constructor(name) {
+        this.name = name
+        this.getName()
+    }
+    getName() {
+        return this.name
+    }
+}
+
+let ProxySing = (function(){
+    let instance;
+    return function(name) {
+        if (!instance) {
+            instance = new Modal(name)
+        }
+        return instance
+    }
+})()
+
+let a = new ProxySing('问题框');
+let b = new ProxySing('回答框');
+
+console.log(a === b); // true
+console.log(a.getName());  // '问题框'
+console.log(b.getName());  // '问题框'
+```
+
+
+#### 面试题
+```js
+for (var i = 0; i < 5; i++) {
+    setTimeout(() => {
+        console.log(i);
+    }, 1000);
+}
+console.log(i)
+// 5 5 5 5 5 5
+```
+
+#### 解决方案
+方法1：立即执行函数
+```js
+for (var i = 0; i < 5; i++) {
+    ((num) => {
+        setTimeout(() => {
+            console.log(num);
+        }, 1000);
+    })(i);
+}
+console.log(i)
+```
+
+方法2：setTimeout传参
+```js
+for (var i = 0; i < 5; i++) {
+    setTimeout((j) => {
+        console.log(j);
+    }, 1000, i);
+}
+console.log(i)
+```
+方法3：使用ES6中的let
+```js
+for (let i = 0; i < 5; i++) {
+    setTimeout(() => {
+        console.log(i);
+    }, 1000);
+}
+console.log(i)  // i is not defined
+```
+方法4：函数调用
+
+```js
+var output = function (i) {
+    setTimeout(function() {
+        console.log(i);
+    }, 1000);
+};
+for (var i = 0; i < 5; i++) {
+    output(i);  // 这里传过去的 i 值被复制了
+}
+console.log(i)
+```
+
+
