--- a/HTTP/页面渲染过程.md
+++ b/HTTP/页面渲染过程.md
@@ -83,7 +83,9 @@ chrome会为每个页面分配一个渲染进程
 4. 渲染阶段
 先根据HTML构建DOM树，有CSS的话会构建CSSOM树。如果有script标签，会判断是否存在 async 或者 defer
 - async 并行下载并执行JS
+标记为async的脚本不保证按照指定他们的先后顺序执行。指定async属性的目的是不让页面等待两个脚本下载和执行，从而异步加载页面其他内容，为此，建议异步脚本不要在加载期间修改DOM。
 - defer 先下载文件，等待HTML解析完成后顺序执行
+defer属性表明脚本在执行时不会影响页面的构造。即脚本会被延迟到整个页面都解析完毕后再执行。defer告诉浏览器，立即下载，但延迟执行。HTML5规范按照他们出现的先后顺序执行，因此页面多个defer，前一个延迟脚本会先于第二个延迟脚本执行，而这两个脚本会先于DOMContentLoaded事件。
 - 都没有，阻塞渲染流程直到 JS 执行完毕
 
 ##### 普通script标签
